# spot-lib

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: interface.rs
general/: Cargo.toml
general/src/: lib.rs  tracks.rs
general/src/enums/: mod.rs  playlists.rs  tracks.rs
general/src/models/: playlists.rs  tracks.rs
general/src/playlists/: mod.rs  playlists.rs  query.rs  update.rs
general/src/traits/: mod.rs  playlists.rs  utilities.rs
general/src/utils/: client.rs  misc.rs  mod.rs
src/: main.rs
tests/: integration_test.rs
tests/common/: mod.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  helpers.rs  lib.rs  ui.rs
tui/src/components/: about.rs  main.rs  mod.rs  popups.rs  quit.rs  releaseradar.rs  settings.rs
tui/src/infrastructure/: enums.rs  mod.rs  widgets.rs
